@@ -9,6 +9,8 @@ Version 1.10.2+svn:
  * Language and i18n:
    * Updated translations: Finnish, French, Galician, Irish,
      Portuguese (Brazil).
+ * Whiteboard
+   * Fixed bug #19613 : Multiple attacks after planning attacks in whiteboard.
 
 
 Version 1.10.2:
