@@ -22,8 +22,6 @@
 
 #include "visitor.hpp"
 
-#include "map_location.hpp"
-
 static lg::log_domain log_whiteboard_highlight("whiteboard/highlight");
 #define ERR_WB_H LOG_STREAM(err, log_whiteboard_highlight)
 #define WRN_WB_H LOG_STREAM(warn, log_whiteboard_highlight)
