@@ -23,8 +23,6 @@
 
 #include "action.hpp"
 
-#include "map_location.hpp"
-
 namespace wb
 {
 
